force-app/main/default/objects/Account/fields/IFv2_AccountingClerkInformation__c.field-meta.xml
<CustomField>
    <fullName>IFv2_AccountingClerkInformation__c</fullName>
    <description>SAP accounting clerk information is here</description>
    <inlineHelpText>SAP accounting clerk information is here</inlineHelpText>
    <label>Accounting Clerk Information</label>
    <type>TextArea</type>
</CustomField>