force-app/main/default/objects/Account/fields/IFv2_ActClockIn__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ActClockIn__c</fullName>
    <label>Act. Clock In</label>
    <type>DateTime</type>
</CustomField>