force-app/main/default/objects/Account/fields/IFv2_ActClockOut__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ActClockOut__c</fullName>
    <label>Act Clock Out</label>
    <type>DateTime</type>
</CustomField>