force-app/main/default/objects/Account/fields/IFv2_Actualvaluenonconformity__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Actualvaluenonconformity__c</fullName>
    <label>Actual value (nonconformity)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>