force-app/main/default/objects/Account/fields/IFv2_AdditionalClock__c.field-meta.xml
<CustomField>
    <fullName>IFv2_AdditionalClock__c</fullName>
    <label>Additional Clock</label>
    <type>DateTime</type>
</CustomField>