force-app/main/default/objects/Account/fields/IFv2_AllDay__c.field-meta.xml
<CustomField>
    <fullName>IFv2_AllDay__c</fullName>
    <description>Used for Leave and Overtime</description>
    <label>All Day</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>