force-app/main/default/objects/Account/fields/IFv2_Amount__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Amount__c</fullName>
    <inlineHelpText>Enter the amount in INR</inlineHelpText>
    <label>Total Amount of line item (INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>