force-app/main/default/objects/Account/fields/IFv2_ApplicantValidation__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ApplicantValidation__c</fullName>
    <label>Applicant Validation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>