force-app/main/default/objects/Account/fields/IFv2_Applications__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Applications__c</fullName>
    <description>used in LEX contracting</description>
    <inlineHelpText>Please include all of applications in the scope of this LEX - SEG Resource Agreement.</inlineHelpText>
    <label>Applications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>