force-app/main/default/objects/Account/fields/IFv2_ApprovalRoute__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ApprovalRoute__c</fullName>
    <label>Approval route</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SG CN</fullName>
            </value>
            <value>
                <fullName>SGIN</fullName>
            </value>
            <value>
                <fullName>SG DE</fullName>
            </value>
            <value>
                <fullName>SG DE HiP</fullName>
            </value>
            <value>
                <fullName>SGHU, Trainee</fullName>
            </value>
            <value>
                <fullName>SGHU, Direct</fullName>
            </value>
            <value>
                <fullName>SGHU, Indirect blue collar</fullName>
            </value>
            <value>
                <fullName>SGHU, Indirect white collar</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>