force-app/main/default/objects/Account/fields/IFv2_ApproverName__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ApproverName__c</fullName>
    <description>Used in APM Workflow</description>
    <inlineHelpText>SAP Approver name</inlineHelpText>
    <label>Approver Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>