force-app/main/default/objects/Account/fields/IFv2_ApproverProxyName__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ApproverProxyName__c</fullName>
    <description>Used in APM Workflows</description>
    <inlineHelpText>SAP Approver Proxy name</inlineHelpText>
    <label>Approver Proxy Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>