force-app/main/default/objects/Account/fields/IFv2_ApproxAreaofActivity__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ApproxAreaofActivity__c</fullName>
    <label>approx. area of activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>