force-app/main/default/objects/Account/fields/IFv2_AssociatedRequest__c.field-meta.xml
<CustomField>
    <fullName>IFv2_AssociatedRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in employee related list</description>
    <label>Associated Request</label>
    <referenceTo>IFv2_RequestExtension1__c</referenceTo>
    <relationshipLabel>Account</relationshipLabel>
    <relationshipName>Account</relationshipName>
    <type>Lookup</type>
</CustomField>