force-app/main/default/objects/Account/fields/IFv2_Barcode__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Barcode__c</fullName>
    <description>Used in APM Workflow</description>
    <inlineHelpText>Barcode</inlineHelpText>
    <label>Barcode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>