force-app/main/default/objects/Account/fields/IFv2_BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>IFv2_BusinessUnit__c</fullName>
    <description>used in EMEA Credit Note Approval</description>
    <inlineHelpText>Please enter the Business Unit</inlineHelpText>
    <label>Business Unit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>