force-app/main/default/objects/Account/fields/IFv2_CandidatePersonnelNumber__c.field-meta.xml
<CustomField>
    <fullName>IFv2_CandidatePersonnelNumber__c</fullName>
    <label>Personnel Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>