force-app/main/default/objects/Account/fields/IFv2_Capacity__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Capacity__c</fullName>
    <label>Capacity</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>