force-app/main/default/objects/Account/fields/IFv2_CapitalizedDate__c.field-meta.xml
<CustomField>
    <fullName>IFv2_CapitalizedDate__c</fullName>
    <label>Capitalized Date</label>
    <type>Date</type>
</CustomField>