force-app/main/default/objects/Account/fields/IFv2_CausesforSpecialFreightDelivery__c.field-meta.xml
<CustomField>
    <fullName>IFv2_CausesforSpecialFreightDelivery__c</fullName>
    <description>WF - used in 42 Special Freights Approval</description>
    <inlineHelpText>Please select the correct cause</inlineHelpText>
    <label>Causes for Special Freight Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delay in Customs Clearance</fullName>
            </value>
            <value>
                <fullName>Delay in delivery packaging material - supplier</fullName>
            </value>
            <value>
                <fullName>delay in delivery RM - supplier</fullName>
            </value>
            <value>
                <fullName>delay in delivery RM/WIP - SG plant</fullName>
            </value>
            <value>
                <fullName>Delay of transport caused by LSP</fullName>
            </value>
            <value>
                <fullName>EDI Failure</fullName>
            </value>
            <value>
                <fullName>incorrect logistics planning / rescheduling - customer</fullName>
            </value>
            <value>
                <fullName>incorect logisting lanning / rescheduling - procurement</fullName>
            </value>
            <value>
                <fullName>IT system breakdown</fullName>
            </value>
            <value>
                <fullName>MAE breakdown (MAZE, spare parts)</fullName>
            </value>
            <value>
                <fullName>missing capacity at supplier</fullName>
            </value>
            <value>
                <fullName>missing empties</fullName>
            </value>
            <value>
                <fullName>missing packaging materials</fullName>
            </value>
            <value>
                <fullName>production backlog due to capacity issues</fullName>
            </value>
            <value>
                <fullName>production backlog due to customer order changes</fullName>
            </value>
            <value>
                <fullName>production backlog due to quality issues</fullName>
            </value>
            <value>
                <fullName>production backlog due to technical problems</fullName>
            </value>
            <value>
                <fullName>quality issue supplier</fullName>
            </value>
            <value>
                <fullName>samples, parts for samles</fullName>
            </value>
            <value>
                <fullName>short-term customer order changes</fullName>
            </value>
            <value>
                <fullName>stock differences - finished goods</fullName>
            </value>
            <value>
                <fullName>stock differences - raw materials</fullName>
            </value>
            <value>
                <fullName>stock differences -WIP</fullName>
            </value>
            <value>
                <fullName>Trade show</fullName>
            </value>
            <value>
                <fullName>Transfer of production</fullName>
            </value>
            <value>
                <fullName>transport damage or force majeure</fullName>
            </value>
            <value>
                <fullName>wrong deliver to customer - logistics quality</fullName>
            </value>
            <value>
                <fullName>wrong delivery to customer - production quality</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>