force-app/main/default/objects/Account/fields/IFv2_ChallanNo__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ChallanNo__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>Challan No</label>
    <type>AutoNumber</type>
</CustomField>