force-app/main/default/objects/Account/fields/IFv2_ChinaEmployeeName__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ChinaEmployeeName__c</fullName>
    <formula>IFv2_EmployeeUser__r.FirstName + &apos; &apos; +  IFv2_EmployeeUser__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Display Name</label>
    <type>Text</type>
</CustomField>