force-app/main/default/objects/Account/fields/IFv2_ChinaMAE__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ChinaMAE__c</fullName>
    <label>China MAE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>