force-app/main/default/objects/Account/fields/IFv2_Company__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Company__c</fullName>
    <formula>TEXT(IFv2_PersonnelNo__r.ExistingCompany__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>