force-app/main/default/objects/Account/fields/IFv2_CompensationType__c.field-meta.xml
<CustomField>
    <fullName>IFv2_CompensationType__c</fullName>
    <description>Used in China Leave and Overtime</description>
    <label>Compensation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Overtime Salary</fullName>
            </value>
            <value>
                <fullName>Compensated Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>