force-app/main/default/objects/Account/fields/IFv2_Concession_Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Concession_Plant_Name__c</fullName>
    <description>Plan Name Field used for Concession</description>
    <label>Plant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>