force-app/main/default/objects/Account/fields/IFv2_ConcessionCustomerText__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ConcessionCustomerText__c</fullName>
    <description>Used in Concession workflow</description>
    <label>Customer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>