force-app/main/default/objects/Account/fields/IFv2_ConcessionSupplierName__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ConcessionSupplierName__c</fullName>
    <description>Used in Concession workflow.</description>
    <label>Supplier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>