force-app/main/default/objects/Account/fields/IFv2_ContainmentAction2__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ContainmentAction2__c</fullName>
    <description>For Concession workflow in InsightFlow 2.0</description>
    <label>Containment Action 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>