force-app/main/default/objects/Account/fields/IFv2_ContainmentAction3__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ContainmentAction3__c</fullName>
    <label>Containment Action 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>