force-app/main/default/objects/Account/fields/IFv2_ContainmentAction4__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ContainmentAction4__c</fullName>
    <label>Containment Action 4</label>
    <length>40</length>
    <type>Text</type>
</CustomField>