force-app/main/default/objects/Account/fields/IFv2_ContainmentActionLongText3__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ContainmentActionLongText3__c</fullName>
    <label>Containment Action Long Text 3</label>
    <length>132</length>
    <type>Text</type>
</CustomField>