force-app/main/default/objects/Account/fields/IFv2_ContentType__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ContentType__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Error Logs</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>Time Data Amendment</fullName>
            </value>
            <value>
                <fullName>OT Application Details</fullName>
            </value>
            <value>
                <fullName>Leave Cancellation</fullName>
            </value>
            <value>
                <fullName>Leave Details</fullName>
            </value>
            <value>
                <fullName>China MAE After Split</fullName>
            </value>
            <value>
                <fullName>China MAE Before Split</fullName>
            </value>
            <value>
                <fullName>China MAE Combine</fullName>
            </value>
            <value>
                <fullName>China MAE Scrap</fullName>
            </value>
            <value>
                <fullName>China MAE Lost</fullName>
            </value>
            <value>
                <fullName>China MAE Transfer</fullName>
            </value>
            <value>
                <fullName>Approval History</fullName>
            </value>
            <value>
                <fullName>Sample ContentType Relatedlist_R</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>