force-app/main/default/objects/Account/fields/IFv2_Contribution_Type__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Contribution_Type__c</fullName>
    <description>Support in Department</description>
    <label>Contribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Coordination</fullName>
            </value>
            <value>
                <fullName>Projects</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Support in Department</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>