force-app/main/default/objects/Account/fields/IFv2_Country__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>