force-app/main/default/objects/Account/fields/IFv2_Currency__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Currency__c</fullName>
    <formula>$User.Currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency</label>
    <type>Text</type>
</CustomField>