force-app/main/default/objects/Account/fields/IFv2_CurrentLocation__c.field-meta.xml
<CustomField>
    <fullName>IFv2_CurrentLocation__c</fullName>
    <label>Current Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>