force-app/main/default/objects/Account/fields/IFv2_CustomerApprovalInformation__c.field-meta.xml
<CustomField>
    <fullName>IFv2_CustomerApprovalInformation__c</fullName>
    <description>Used in Concession Workflow</description>
    <label>Customer Approval Information</label>
    <length>132</length>
    <type>Text</type>
</CustomField>