force-app/main/default/objects/Account/fields/IFv2_CustomerName__c.field-meta.xml
<CustomField>
    <fullName>IFv2_CustomerName__c</fullName>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>