force-app/main/default/objects/Account/fields/IFv2_CustomerNo__c.field-meta.xml
<CustomField>
    <fullName>IFv2_CustomerNo__c</fullName>
    <description>Used in Concession Workflow</description>
    <label>Customer No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>