force-app/main/default/objects/Account/fields/IFv2_Description__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Description__c</fullName>
    <description>This is used in Concession workflow</description>
    <inlineHelpText>Reasons</inlineHelpText>
    <label>Description.</label>
    <length>30700</length>
    <type>Html</type>
</CustomField>