force-app/main/default/objects/Account/fields/IFv2_DescriptionIdentification__c.field-meta.xml
<CustomField>
    <fullName>IFv2_DescriptionIdentification__c</fullName>
    <description>This is for description/Identification.</description>
    <label>Description/Identification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>