force-app/main/default/objects/Account/fields/IFv2_DescriptionMGP__c.field-meta.xml
<CustomField>
    <fullName>IFv2_DescriptionMGP__c</fullName>
    <description>Used in MGP</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>