force-app/main/default/objects/Account/fields/IFv2_DescriptionPicklist__c.field-meta.xml
<CustomField>
    <fullName>IFv2_DescriptionPicklist__c</fullName>
    <label>Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Missing Clock</fullName>
            </value>
            <value>
                <fullName>Using Wrong Clock Machine</fullName>
            </value>
            <value>
                <fullName>Additional Clock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>