force-app/main/default/objects/Account/fields/IFv2_Details__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Details__c</fullName>
    <formula>External_Id__c + 
IF(NOT ISBLANK(TEXT(Plant__c)),IF(NOT(ISBLANK(External_Id__c)),&apos; - &apos;,&apos;&apos;) + TEXT(Plant__c),&apos;&apos;) + 
IF(NOT ISBLANK(Account_Name_2__c),IF(OR(NOT(ISBLANK(External_Id__c)),NOT(ISBLANK(TEXT(Plant__c)))),&apos; - &apos;,&apos;&apos;) + Account_Name_2__c,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer/Supplier Details</label>
    <type>Text</type>
</CustomField>