force-app/main/default/objects/Account/fields/IFv2_DirectIndirect__c.field-meta.xml
<CustomField>
    <fullName>IFv2_DirectIndirect__c</fullName>
    <label>Direct/Indirect</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>