force-app/main/default/objects/Account/fields/IFv2_DocumentItem__c.field-meta.xml
<CustomField>
    <fullName>IFv2_DocumentItem__c</fullName>
    <inlineHelpText>SAP Document Item in Invoice Document</inlineHelpText>
    <label>Document Item</label>
    <length>6</length>
    <type>Text</type>
</CustomField>