force-app/main/default/objects/Account/fields/IFv2_DutyFreeCertificateNo__c.field-meta.xml
<CustomField>
    <fullName>IFv2_DutyFreeCertificateNo__c</fullName>
    <label>Duty Free Certificate No.</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>