force-app/main/default/objects/Account/fields/IFv2_DVP_Issue__c.field-meta.xml
<CustomField>
    <fullName>IFv2_DVP_Issue__c</fullName>
    <description>Used in DVP workflow</description>
    <inlineHelpText>Please enter DVP issue number in the following format: X.XX</inlineHelpText>
    <label>DVP Issue</label>
    <length>4</length>
    <type>Text</type>
</CustomField>