force-app/main/default/objects/Account/fields/IFv2_EffectiveFrom2__c.field-meta.xml
<CustomField>
    <fullName>IFv2_EffectiveFrom2__c</fullName>
    <label>Effective From 2</label>
    <type>Date</type>
</CustomField>