force-app/main/default/objects/Account/fields/IFv2_EffectiveFrom3__c.field-meta.xml
<CustomField>
    <fullName>IFv2_EffectiveFrom3__c</fullName>
    <label>Effective From 3</label>
    <type>Date</type>
</CustomField>