force-app/main/default/objects/Account/fields/IFv2_EffectiveFrom4__c.field-meta.xml
<CustomField>
    <fullName>IFv2_EffectiveFrom4__c</fullName>
    <label>Effective From 4</label>
    <type>Date</type>
</CustomField>