force-app/main/default/objects/Account/fields/IFv2_EmployeeCompany__c.field-meta.xml
<CustomField>
    <fullName>IFv2_EmployeeCompany__c</fullName>
    <label>Employee Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>