force-app/main/default/objects/Account/fields/IFv2_EmployeeOrgUnit__c.field-meta.xml
<CustomField>
    <fullName>IFv2_EmployeeOrgUnit__c</fullName>
    <label>Employee OrgUnit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>