force-app/main/default/objects/Account/fields/IFv2_EmployeePersonnelNumber__c.field-meta.xml
<CustomField>
    <fullName>IFv2_EmployeePersonnelNumber__c</fullName>
    <label>Employee Personnel Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>