force-app/main/default/objects/Account/fields/IFv2_EmployeePosition__c.field-meta.xml
<CustomField>
    <fullName>IFv2_EmployeePosition__c</fullName>
    <label>Employee Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>