force-app/main/default/objects/Account/fields/IFv2_EmployeeUser__c.field-meta.xml
<CustomField>
    <fullName>IFv2_EmployeeUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>