force-app/main/default/objects/Account/fields/IFv2_Escalatetomanagementlevel__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Escalatetomanagementlevel__c</fullName>
    <description>Used in Concession Workflow</description>
    <inlineHelpText>The second and further concessions with the same root cause must be escalated to the leading management level.</inlineHelpText>
    <label>Escalate to management level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>