force-app/main/default/objects/Account/fields/IFv2_EstimatedImportTaxtoPay__c.field-meta.xml
<CustomField>
    <fullName>IFv2_EstimatedImportTaxtoPay__c</fullName>
    <label>Estimated Import Tax to Pay</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>