force-app/main/default/objects/Account/fields/IFv2_ExampleforlevelERA__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ExampleforlevelERA__c</fullName>
    <label>Example for level (ERA)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>