force-app/main/default/objects/Account/fields/IFv2_Expenditure_in_Man_days__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Expenditure_in_Man_days__c</fullName>
    <description>Used in Lex contracting workflow</description>
    <label>Expenditure in Man-days</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>