force-app/main/default/objects/Account/fields/IFv2_FirstName__c.field-meta.xml
<CustomField>
    <fullName>IFv2_FirstName__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>