force-app/main/default/objects/Account/fields/IFv2_FiscalYear__c.field-meta.xml
<CustomField>
    <fullName>IFv2_FiscalYear__c</fullName>
    <description>SAP Fiscal Year.</description>
    <inlineHelpText>SAP Fiscal Year</inlineHelpText>
    <label>Fiscal Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>