force-app/main/default/objects/Account/fields/IFv2_FromDate__c.field-meta.xml
<CustomField>
    <fullName>IFv2_FromDate__c</fullName>
    <description>Used in China Leave and Overtime</description>
    <inlineHelpText>Input is mandatory</inlineHelpText>
    <label>From Date</label>
    <type>DateTime</type>
</CustomField>