force-app/main/default/objects/Account/fields/IFv2_FromDate_Date__c.field-meta.xml
<CustomField>
    <fullName>IFv2_FromDate_Date__c</fullName>
    <formula>DATEVALUE(IFv2_FromDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Date</label>
    <type>Date</type>
</CustomField>