force-app/main/default/objects/Account/fields/IFv2_FromPlace__c.field-meta.xml
<CustomField>
    <fullName>IFv2_FromPlace__c</fullName>
    <label>From Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>