force-app/main/default/objects/Account/fields/IFv2_FromTime_Time__c.field-meta.xml
<CustomField>
    <fullName>IFv2_FromTime_Time__c</fullName>
    <formula>MID(TEXT(IFv2_FromDate__c + 0.3333),12,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Time</label>
    <type>Text</type>
</CustomField>