force-app/main/default/objects/Account/fields/IFv2_Full8Dreport__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Full8Dreport__c</fullName>
    <description>Used in Concession Workflow</description>
    <formula>&quot;This concession is only valid with an attached 8D report, filled out at least up to and including D3 Containment actions.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full 8D report</label>
    <type>Text</type>
</CustomField>