force-app/main/default/objects/Account/fields/IFv2_Full8Dreportnecessarydescription__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Full8Dreportnecessarydescription__c</fullName>
    <description>Used in Concession workflow</description>
    <label>Full 8D report necessary description</label>
    <length>132</length>
    <type>Text</type>
</CustomField>