force-app/main/default/objects/Account/fields/IFv2_Function__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Function__c</fullName>
    <description>Used in Concession</description>
    <inlineHelpText>Maximum Characters Allowed - 132</inlineHelpText>
    <label>Function</label>
    <length>132</length>
    <type>Text</type>
</CustomField>