force-app/main/default/objects/Account/fields/IFv2_Furtherprocessing__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Furtherprocessing__c</fullName>
    <description>Used in Concession Workflow</description>
    <inlineHelpText>Maximum Characters Allowed - 132</inlineHelpText>
    <label>Further processing</label>
    <length>132</length>
    <type>Text</type>
</CustomField>