force-app/main/default/objects/Account/fields/IFv2_GL__c.field-meta.xml
<CustomField>
    <fullName>IFv2_GL__c</fullName>
    <description>Used in APM Workflow</description>
    <label>G/L Account</label>
    <length>10</length>
    <type>Text</type>
</CustomField>