force-app/main/default/objects/Account/fields/IFv2_GoodsReceiptDocument__c.field-meta.xml
<CustomField>
    <fullName>IFv2_GoodsReceiptDocument__c</fullName>
    <description>Used in Concession Workflow</description>
    <inlineHelpText>Enter 10 numbers max.</inlineHelpText>
    <label>Goods Receipt Document</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>