force-app/main/default/objects/Account/fields/IFv2_GoodsReceiptNumber__c.field-meta.xml
<CustomField>
    <fullName>IFv2_GoodsReceiptNumber__c</fullName>
    <inlineHelpText>Enter 10 numbers max.</inlineHelpText>
    <label>Goods Receipt Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>