force-app/main/default/objects/Account/fields/IFv2_HSN__c.field-meta.xml
<CustomField>
    <fullName>IFv2_HSN__c</fullName>
    <label>HSN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>