force-app/main/default/objects/Account/fields/IFv2_ID__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ID__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID</label>
    <type>Text</type>
</CustomField>