force-app/main/default/objects/Account/fields/IFv2_iFreightPlant__c.field-meta.xml
<CustomField>
    <fullName>IFv2_iFreightPlant__c</fullName>
    <formula>text ( $User.iFreight_Plant__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant</label>
    <type>Text</type>
</CustomField>