force-app/main/default/objects/Account/fields/IFv2_Ihavereadagreedtheusageagreement__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Ihavereadagreedtheusageagreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in General Approval Form workflow</description>
    <label>I have read &amp; agreed the usage agreement</label>
    <type>Checkbox</type>
</CustomField>