force-app/main/default/objects/Account/fields/IFv2_IIisblockedduetootherreasons__c.field-meta.xml
<CustomField>
    <fullName>IFv2_IIisblockedduetootherreasons__c</fullName>
    <description>This field is used in APM workflows.</description>
    <label>II is blocked due to other reasons</label>
    <length>2</length>
    <type>Text</type>
</CustomField>