force-app/main/default/objects/Account/fields/IFv2_ImportTax__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ImportTax__c</fullName>
    <label>Import Tax</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>