force-app/main/default/objects/Account/fields/IFv2_InfofromSAP__c.field-meta.xml
<CustomField>
    <fullName>IFv2_InfofromSAP__c</fullName>
    <label>Info from SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>